ops/flagger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app
  namespace: test
  labels:
    app: sample-app
spec:
  ingressClassName: nginx
  rules:
    - host: sample.minikube.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sample-app
                port:
                  number: 80
